force-app/main/default/objects/CGD_Visit__c/CGD_Visit__c.object-meta.xml
<CustomObject>
    <description>拜訪紀錄，用以保存拜訪客戶之內容</description>
    <label>Visit</label>
    <nameField>
        <displayFormat>V-{0000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>