force-app/main/default/objects/CGD_Visit__c/fields/CGD_Account__c.field-meta.xml
<CustomField>
    <fullName>CGD_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>拜訪公司名稱</description>
    <inlineHelpText>拜訪公司名稱</inlineHelpText>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>CGD_Account</value>
        </filterItems>
        <filterItems>
            <field>Account.CGD_Account_For__c</field>
            <operation>equals</operation>
            <value>Customer Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Visits</relationshipLabel>
    <relationshipName>Visits</relationshipName>
    <type>Lookup</type>
</CustomField>