force-app/main/default/objects/CGD_Visit__c/fields/CGD_Account_Code__c.field-meta.xml
<CustomField>
    <fullName>CGD_Account_Code__c</fullName>
    <description>拜訪公司名稱</description>
    <inlineHelpText>拜訪公司名稱</inlineHelpText>
    <label>Account Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>