force-app/main/default/objects/CGD_Visit__c/fields/CGD_Agent_Category__c.field-meta.xml
<CustomField>
    <fullName>CGD_Agent_Category__c</fullName>
    <description>客戶分類</description>
    <inlineHelpText>客戶分類</inlineHelpText>
    <label>Agent Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Visit</fullName>
            </value>
            <value>
                <fullName>Prospecting Visit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>