force-app/main/default/objects/CGD_Visit__c/fields/CGD_Detail__c.field-meta.xml
<CustomField>
    <fullName>CGD_Detail__c</fullName>
    <description>拜訪內容摘要</description>
    <inlineHelpText>拜訪內容摘要</inlineHelpText>
    <label>Detail</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>