force-app/main/default/objects/CGD_Visit__c/fields/CGD_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>CGD_Follow_Up__c</fullName>
    <description>後續行動</description>
    <inlineHelpText>後續行動</inlineHelpText>
    <label>Follow-up</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>