force-app/main/default/objects/CGD_Visit__c/fields/CGD_Follow_Up_Notification__c.field-meta.xml
<CustomField>
    <fullName>CGD_Follow_Up_Notification__c</fullName>
    <description>User可設定提醒時間，跳小鈴鐺</description>
    <label>Follow-up Notification</label>
    <type>DateTime</type>
</CustomField>