force-app/main/default/objects/CGD_Visit__c/fields/CGD_JX_Attendees__c.field-meta.xml
<CustomField>
    <fullName>CGD_JX_Attendees__c</fullName>
    <description>星宇與會人員</description>
    <inlineHelpText>星宇與會人員</inlineHelpText>
    <label>JX Attendees</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>