force-app/main/default/objects/CGD_Visit__c/fields/CGD_Schedule__c.field-meta.xml
<CustomField>
    <fullName>CGD_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Schedule</label>
    <type>Checkbox</type>
</CustomField>