force-app/main/default/objects/CGD_Visit__c/fields/CGD_Station__c.field-meta.xml
<CustomField>
    <fullName>CGD_Station__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Station</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.CGD_Account_For__c</field>
            <operation>equals</operation>
            <value>Station Account</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>CGD - Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Visits (Station)</relationshipLabel>
    <relationshipName>VisitsStation</relationshipName>
    <type>Lookup</type>
</CustomField>