force-app/main/default/objects/CGD_Visit__c/fields/CGD_Title_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>CGD_Title_of_Contact__c</fullName>
    <description>拜訪對象職稱</description>
    <inlineHelpText>拜訪對象職稱</inlineHelpText>
    <label>Title of Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>