force-app/main/default/objects/CGD_Visit__c/fields/CGD_Type_of_Visit__c.field-meta.xml
<CustomField>
    <fullName>CGD_Type_of_Visit__c</fullName>
    <description>拜訪方式</description>
    <inlineHelpText>拜訪方式</inlineHelpText>
    <label>Type of Visit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone call</fullName>
            </value>
            <value>
                <fullName>In-person</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>