force-app/main/default/objects/CGD_Visit__c/fields/CGD_Visit_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>CGD_Visit_Date_Time__c</fullName>
    <description>拜訪日期/時間</description>
    <inlineHelpText>拜訪日期/時間</inlineHelpText>
    <label>Visit Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>