force-app/main/default/objects/CGD_Visit__c/fields/CGD_Visit_Purpose__c.field-meta.xml
<CustomField>
    <fullName>CGD_Visit_Purpose__c</fullName>
    <description>拜訪目的</description>
    <inlineHelpText>拜訪目的</inlineHelpText>
    <label>Visit Purpose</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>