force-app/main/default/objects/CGD_Visit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CGD_Visit_Date_Time__c</columns>
    <columns>CGD_Account__c</columns>
    <columns>CGD_Account_Code__c</columns>
    <columns>CGD_Agent_Category__c</columns>
    <columns>CGD_JX_Attendees__c</columns>
    <columns>CGD_Follow_Up__c</columns>
    <columns>CGD_Detail__c</columns>
    <columns>CGD_Title_of_Contact__c</columns>
    <columns>CGD_Type_of_Visit__c</columns>
    <columns>CGD_Visit_Purpose__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>